--- a/pom.xml
+++ b/pom.xml
@@ -8,19 +8,19 @@
   <groupId>org.mortbay.jetty</groupId>
   <artifactId>jetty-project</artifactId>
   <packaging>pom</packaging>
-  <version>7.0.0.1beta1-SNAPSHOT</version>
+  <version>7.0.0.1beta1</version>
   <name>Jetty :: Project Parent</name>
 
   <properties>
     <atomikos-version>3.2.3</atomikos-version>
-    <jetty-version>7.0.0.M1</jetty-version>
+    <jetty-version>7.0.0.M2</jetty-version>
     <jsp-2-1-version>9.1.1.B60.25.p1</jsp-2-1-version>
   </properties>
 
   <scm>
-    <connection>scm:svn:https://svn.codehaus.org/jetty/jetty/trunk/jetty-project</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/jetty/jetty/trunk/jetty-project</developerConnection>
-    <url>scm:svn:https://svn.codehaus.org/jetty/jetty/trunk/jetty-project</url>
+    <connection>scm:svn:https://svn.codehaus.org/jetty/jetty/tags/jetty-project-7.0.0.1beta1</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/jetty/jetty/tags/jetty-project-7.0.0.1beta1</developerConnection>
+    <url>scm:svn:https://svn.codehaus.org/jetty/jetty/tags/jetty-project-7.0.0.1beta1</url>
   </scm>
 
   <build>
