--- a/jetty-hightide/pom.xml
+++ b/jetty-hightide/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.mortbay.jetty</groupId>
     <artifactId>jetty-integration-project</artifactId>
-    <version>7.0.2-SNAPSHOT</version>
+    <version>7.0.1.v20091125</version>
   </parent>
   <artifactId>jetty-hightide</artifactId>
   <name>Jetty :: Hightide Distribution</name>
@@ -496,6 +496,15 @@
                   <includes>**</includes>
                   <outputDirectory>${assembly.directory}/lib/spring</outputDirectory>
                 </artifactItem>
+                <artifactItem>
+                  <groupId>org.eclipse.jetty</groupId>
+                  <artifactId>jetty-websocket</artifactId>
+                  <version>${jetty-version}</version>
+                  <type>jar</type>
+                  <overWrite>true</overWrite>
+                  <includes>**</includes>
+                  <outputDirectory>${assembly.directory}/lib</outputDirectory>
+                </artifactItem>  
               </artifactItems>
             </configuration>
           </execution>
@@ -756,6 +765,11 @@
     <dependency>
     	<groupId>org.eclipse.jetty</groupId>
     	<artifactId>jetty-policy</artifactId>
+    	<version>${jetty-version}</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.eclipse.jetty</groupId>
+    	<artifactId>jetty-websocket</artifactId>
     	<version>${jetty-version}</version>
     </dependency>
     <dependency>
