--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,7 @@
       <layout>default</layout>
       <url>http://download.java.net/maven/2/</url>
       <snapshots>
-        <enabled>true</enabled>
+        <enabled>false</enabled>
       </snapshots>
       <releases>
         <enabled>true</enabled>
