Comment out repositories to satisfy maven central build rules. To build this distribution, uncomment the sections marked 'uncomment to build'
git-svn-id: https://svn.codehaus.org/jetty/jetty/tags/jetty-8.0.0.M0@5884 c7fae8f8-2506-0410-b6b2-ad6cf81c2737

--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,9 @@
     </pluginManagement>
   </build>
   <modules>
+    <!-- uncomment to build
     <module>repository</module>
+     -->
     <module>jetty-maven-plugin</module>
     <module>jetty-jspc-maven-plugin</module>
     <!-- module>jetty-ant</module -->
@@ -139,6 +141,7 @@
     <!-- module>jetty-jboss</module -->
   </modules>
 
+<!-- uncomment to build
   <repositories>
     <repository>
       <id>download.java.net</id>
@@ -153,4 +156,5 @@
       </releases>
    </repository>
   </repositories>
+-->
 </project>
