--- a/jetty-hightide/pom.xml
+++ b/jetty-hightide/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.mortbay.jetty</groupId>
     <artifactId>jetty-integration-project</artifactId>
-    <version>7.1.0-SNAPSHOT</version>
+    <version>7.1.0.RC0</version>
   </parent>
   <artifactId>jetty-hightide</artifactId>
   <name>Jetty :: Hightide Distribution</name>
@@ -405,7 +405,7 @@
                 <artifactItem>
                   <groupId>org.eclipse.jetty</groupId>
                   <artifactId>jetty-jsp-2.1</artifactId>
-                  <version>${version}</version>
+                  <version>${jetty-version}</version>
                   <type>jar</type>
                   <overWrite>true</overWrite>
                   <includes>**</includes>
@@ -441,7 +441,7 @@
                  <artifactItem>
                   <groupId>org.eclipse.jetty</groupId>
                   <artifactId>test-jetty-webapp</artifactId>
-                  <version>${project.version}</version>
+                  <version>${jetty-version}</version>
                   <type>war</type>
                   <overWrite>true</overWrite>
                   <includes>**</includes>
@@ -741,7 +741,7 @@
       <groupId>org.eclipse.jetty</groupId>
         <artifactId>test-jetty-webapp</artifactId>
         <type>war</type>
-        <version>${project.version}</version>
+        <version>${jetty-version}</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
