--- a/test-annotation-webapp/pom.xml
+++ b/test-annotation-webapp/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.mortbay.jetty</groupId>
     <artifactId>jetty-integration-project</artifactId>
-    <version>7.1.0-SNAPSHOT</version>
+    <version>7.1.0.RC0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.mortbay.jetty</groupId>
@@ -11,6 +11,13 @@
   <name>Jetty :: Annotations Test Webapp</name>
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
        <plugin>
          <artifactId>maven-antrun-plugin</artifactId>
          <executions>
