comment out repositories for main repo upload - uncomment to build
git-svn-id: https://svn.codehaus.org/jetty/jetty/tags/jetty-8.0.0.M1@6116 c7fae8f8-2506-0410-b6b2-ad6cf81c2737

--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,8 @@
     <!-- module>jetty-jboss</module -->
   </modules>
 
+<!-- Uncomment repositories to build -->
+<!--
   <repositories>
     <repository>
       <id>download.java.net</id>
@@ -152,4 +154,5 @@
       </releases>
    </repository>
   </repositories>
+-->
 </project>
