--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.mortbay.jetty</groupId>
   <artifactId>jetty-integration-project</artifactId>
-  <version>8.0.0.M2-SNAPSHOT</version>
+  <version>8.0.0.M2</version>
   <name>Jetty :: Codehaus Integration Project</name>
   <description>Jetty integrations and distributions</description>
   <packaging>pom</packaging>
 
   <properties>
-    <jetty-version>8.0.0.M2-SNAPSHOT</jetty-version>
+    <jetty-version>8.0.0.M2</jetty-version>
     <felix.bundle.version>2.0.0</felix.bundle.version>
     <jna-version>3.2.2</jna-version>
     <jsp-version>2.2</jsp-version>
@@ -24,9 +24,9 @@
   </properties>
 
   <scm>
-    <connection>scm:svn:https://svn.codehaus.org/jetty/jetty/branches/jetty-8</connection>
-    <developerConnection>scm:svn:https://svn.codehaus.org/jetty/jetty/branches/jetty-8</developerConnection>
-    <url>scm:svn:https://svn.codehaus.org/jetty/jetty/branches/jetty-8</url>
+    <connection>scm:svn:https://svn.codehaus.org/jetty/jetty/tags/jetty-8.0.0.M2</connection>
+    <developerConnection>scm:svn:https://svn.codehaus.org/jetty/jetty/tags/jetty-8.0.0.M2</developerConnection>
+    <url>scm:svn:https://svn.codehaus.org/jetty/jetty/tags/jetty-8.0.0.M2</url>
   </scm>
 
   <build>
